--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
-    "exe": "scanner.py", 
+    "exe": "bedsensor.py", 
     "protocol": "ble", 
-    "name": "Nocturne Bedsensor", 
-    "url": "https://github.com/ContinuumBridge/nocturne_bedsensor/archive/v0.0.1.tar.gz", 
-    "app_resource": "/api/bridge/v1/app/25", 
-    "version": "0.0.1", 
+    "name": "BedSensor", 
+    "device_resource": "/api/bridge/v1/device/56", 
+    "url": "https://github.com/ContinuumBridge/nocturne_bedsensor/archive/v1.0.0.tar.gz", 
+    "version": "1.0.0", 
     "provider": "ContinuumBridge", 
+    "adaptor_resource": "/api/bridge/v1/adaptor/19", 
     "description": "Adaptor for Designability Project Nocturne Bedsensor"
 }
